文档矫正更新